haproxy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            port:
              number: 80
            name: argocd-server
        path: /v1/api
        pathType: Prefix
