ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-helloword
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare"
spec:
  rules:
  - host: argocd.moabukar.co.uk
    http:
      paths:
      - backend:
          service:
            port:
              number: 443
            name: argocd-server
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.moabukar.co.uk
    secretName: argo-http-tls
  ingressClassName: nginx
