test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
  - host: hello.dustinspecker.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80
